components/devfile-go-sample-multi-component-example-main-lc4u/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: multi-component-application
    appstudio.openshift.io/component: devfile-go-sample-multi-component-example-main-lc4u
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eldevfile-go-sample-multi-component-example-main-lc4u
  namespace: e2e-demo-wgqf
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-devfile-go-sample-multi-component-example-main-lc4u
    weight: null
status: {}
